<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6EFB8"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:autofillHints="0"
        android:hint="@string/enter_the_first_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#33691E"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toLeftOf="@id/editTextNumberDecimal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/enter_the_second_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#33691E"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/editTextNumberDecimal" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:contentDescription="@string/android_is_the_best"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal">

        <RadioButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:background="#F5F0A7"
            android:textColor="#040404" />

        <RadioButton
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:background="#F5F0A7"
            android:textColor="#040404"/>

        <RadioButton
            android:id="@+id/multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiple"
            android:background="#F5F0A7"
            android:textColor="#040404"/>

        <RadioButton
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:background="#F5F0A7"
            android:textColor="#040404" />
    </RadioGroup>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#105F00"
        android:text="@string/calculate"
        android:textColor="#FFFDE7"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/you_answer_will_be_displayed_here"
        android:textColor="#33691E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/calc"
        app:layout_constraintStart_toStartOf="@+id/calc"
        app:layout_constraintTop_toBottomOf="@+id/calc" />

</androidx.constraintlayout.widget.ConstraintLayout>